# landRAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.superpowers/brainstorm/1050-1774020327/: .server-stopped  chat-layout-v2.html
.superpowers/brainstorm/413-1774015757/: .server-stopped  chat-layout.html
alembic/: env.py
alembic/versions/: 1f2371d96007_widen_local_authority_to_text.py  a5c3200b8162_initial_schema.py
docs/: DEPLOYMENT.md
docs/plans/: 2026-03-06-landrag-architecture-design.md  2026-03-06-landrag-deployment.md  2026-03-06-landrag-phase1-implementation.md  2026-03-06-landrag-post-mvp.md  2026-03-06-mvp-deployment.md
docs/product/: pitch
docs/superpowers/plans/: 2026-03-20-rag-chat-interface.md
docs/superpowers/specs/: 2026-03-20-rag-chat-interface-design.md
scripts/: deploy.sh  provision.sh
src/landrag/: cli.py
src/landrag/api/: app.py  dependencies.py
src/landrag/chat/: dedup.py  pipeline.py  prompt.py  rewriter.py  (+1 more)
tests/: conftest.py
tests/api/: test_chat.py  test_corpus.py  test_health.py  test_search.py  test_ui.py
tests/chat/: test_dedup.py  test_filter_merge.py  test_prompt.py  test_rewriter.py  test_streaming.py
tests/core/: test_config.py  test_pinecone.py
tests/ingestion/: test_chunker.py  test_classifier.py  test_embedder.py
tests/models/: test_database.py  test_enums.py  test_schemas.py
tests/search/: test_reranker.py  test_retrieval.py
tests/workers/: test_tasks.py
(+32 files in other folders)
