[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landrag"
version = "0.1.0"
description = "Semantic search and RAG platform for UK planning documents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pinecone>=6.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.60.0",
    "cohere>=5.0.0",
    "pypdf>=5.0.0",
    "pytesseract>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "rank-bm25>=0.2.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "google-cloud-storage>=2.18.0",
    "anthropic>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "evaluation: retrieval quality evaluation tests (run manually)",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
